// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesToolbar should render Toolbar, if category can be found 1`] = `
<Toolbar>
  <ToolbarAnchor
    href="https://cms.integreat-app.de/augsburg/en/wp-json/ig-mpdf/v1/pdf?url=/augsburg/de/willkommen"
    name="file-pdf-o"
    text="createPdf"
  />
  <Translate(ToolbarRatingItem)
    city="augsburg"
    isPositiveRating={true}
    language="en"
    pageId={3649}
  />
  <Translate(ToolbarRatingItem)
    city="augsburg"
    isPositiveRating={false}
    language="en"
    pageId={3649}
  />
</Toolbar>
`;

exports[`CategoriesToolbar should render root-url for pdf endpoint 1`] = `
<Toolbar>
  <ToolbarAnchor
    href="https://cms.integreat-app.de/augsburg/en/wp-json/ig-mpdf/v1/pdf"
    name="file-pdf-o"
    text="createPdf"
  />
  <Translate(ToolbarRatingItem)
    city="augsburg"
    isPositiveRating={true}
    language="en"
    pageId={0}
  />
  <Translate(ToolbarRatingItem)
    city="augsburg"
    isPositiveRating={false}
    language="en"
    pageId={0}
  />
</Toolbar>
`;
